chapter04_opentelemetry/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: handson
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: handson
spec:
  selector:
    app: bff
  ports:
    - port: 8080
      targetPort: 8080
