chapter04_opentelemetry/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress-by-nginx
  namespace: handson
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /bff
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 8080
